[tool.poetry]
name = "dagster-poc"
version = "0.1.0"
description = ""
authors = ["Jakob J. Kolb <jakob.j.kolb@gmail.com>"]
readme = "README.md"
packages = [{include = "assets_dbt_python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dagster = "^1.2.2"
dagit = "^1.2.2"
pandas = "^1.5.3"
ramda = "^0.7.6"
requests = "^2.28.2"
matplotlib = "^3.7.1"
wordcloud = "^1.8.2.2"
dagster-duckdb = "^0.18.2"
dagster-duckdb-pandas = "^0.18.2"
dagster-dbt = "^0.18.4"
numpy = "^1.24.2"
scipy = "^1.10.1"
dbt-core = "^1.4.5"
dbt-duckdb = "^1.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "assets_dbt_python"

[tool.flake8]
max-line-length = 120
exclude = ".git,__pycache__,.venv,.eggs,*.egg,build,dist,venv"

